--- a/_sass/_tokens.scss
+++ b/_sass/_tokens.scss
@@ -97,7 +97,7 @@ body {
 
 // --- Layout wrapper ---
 .wrapper {
-  max-width: 72ch;
+  max-width: 90ch;
   margin: 0 auto;
   padding: 2vh 4vw;
 }
